fix wrapping title and avatar

--- a/style.scss
+++ b/style.scss
@@ -191,22 +191,23 @@ nav {
   div.avatar {
     align-self: flex-end;
     display: block;
-    max-width: 800px;
-    flex-basis: 600px;
-    max-width: calc(100vw - 20px);
-    margin: 0 0 0px auto;
+    flex-basis: 30%;
+    margin: 0 0 -3px auto;
 
-    div.avatar-img {
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-image: url("./avatar.png");
-      width: 100%;
-      min-height: 200px;
-      max-height: 500px;
+
+    .avatar-img {
+        width: 100%;
+        height: auto;
     }
   }
+
   div.title-text {
+    display: flex;
+    flex-basis: 70%;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 0;
+
     svg {
       position: fixed;
       z-index: -1;
@@ -215,12 +216,7 @@ nav {
       padding: 0;
       margin: 0;
     }
-    display: flex;
-    flex-basis: 500px;
-    min-width: 300px;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-left: 0;
+
     h1 {
       margin-bottom: 10px;
       -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
@@ -425,6 +421,11 @@ nav {
   }
   .contributions-text {
     display: none;
+  }
+  .title .title-text {
+      h5 {
+          font-size: 16px;
+      }
   }
   .skill-sliders {
     p.skill {
